--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "iconfont"; /* Project id  */
-  src: url('iconfont.ttf?t=1691728494391') format('truetype');
+  src: url('iconfont.ttf?t=1691970280363') format('truetype');
 }
 
 .iconfont {
@@ -9,6 +9,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-roundclosefill:before {
+  content: "\e658";
+}
+
+.icon-close:before {
+  content: "\e6a7";
 }
 
 .icon-play:before {
