--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -3,6 +3,7 @@
 @import './size.scss';
 @import './space.scss';
 @import './iconfont/iconfont.css';
+@import './iconfont-moyin/iconfont.css';
 
 #app {
   margin: 0 auto;
