feat: 完成多音字功能

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -4,4 +4,5 @@
   --tool-orange-color: #f57d19;
   --tool-purple-color: #9958f4;
   --tool-yellow-color: #f6b601;
+  --tool-btn-hover-bg-color: #e5e5e5;
 }
