--- a/src/assets/flex.scss
+++ b/src/assets/flex.scss
@@ -3,10 +3,12 @@
 
   &.flex-row {
     flex-direction: row;
+    align-items: center;
   }
 
   &.flex-col {
     flex-direction: column;
+    align-items: center;
   }
 }
 
