--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -5,6 +5,26 @@
 @import './iconfont/iconfont.css';
 @import './iconfont-moyin/iconfont.css';
 
+.btn {
+  margin: 0;
+  padding: 2px 2px;
+  border: 1px solid transparent;
+  outline: none;
+  border-radius: 4px;
+  margin: 2px 2px;
+  display: block;
+  text-align: center;
+  font-size: 14px;
+
+  &:not(.btn-text):hover {
+    background-color: var(--tool-btn-hover-bg-color);
+  }
+
+  &.btn-text {
+    background-color: transparent;
+  }
+}
+
 .btn:not(.disabled) {
   cursor: pointer;
 }
@@ -15,4 +35,9 @@
 
 .btn.radius {
   border-radius: 5px;
+}
+
+.full {
+  width: 100%;
+  height: 100%;
 }
