feat: 完成音标功能

--- a/src/module/style.scss
+++ b/src/module/style.scss
@@ -37,9 +37,15 @@
       background-color: $continuous;
       color: $continuous;
     }
+
     &.alias {
       background-color: $alias;
       color: $alias;
+    }
+
+    &.english {
+      background-color: $english;
+      color: $english;
     }
   }
 
