--- a/src/module/style.scss
+++ b/src/module/style.scss
@@ -47,6 +47,10 @@
       background-color: $english;
       color: $english;
     }
+    &.changespeed {
+      background-color: $changespeed;
+      color: $changespeed;
+    }
   }
 
   .bg-color:not(.ft-color) {
