feat: 完成停顿功能

--- a/src/module/style.scss
+++ b/src/module/style.scss
@@ -55,6 +55,10 @@
       background-color: $changespeed;
       color: $changespeed;
     }
+    &.rhythm {
+      background-color: $rhythm;
+      color: $rhythm;
+    }
   }
 
   .bg-color:not(.ft-color) {
