--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,10 +1,10 @@
 @font-face {
-  font-family: "iconfont"; /* Project id  */
+  font-family: 'iconfont'; /* Project id  */
   src: url('iconfont.ttf?t=1691970280363') format('truetype');
 }
 
 .iconfont {
-  font-family: "iconfont" !important;
+  font-family: 'iconfont' !important;
   font-size: 16px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
@@ -12,14 +12,13 @@
 }
 
 .icon-roundclosefill:before {
-  content: "\e658";
+  content: '\e658';
 }
 
 .icon-close:before {
-  content: "\e6a7";
+  content: '\e6a7';
 }
 
 .icon-play:before {
-  content: "\e6b0";
+  content: '\e6b0';
 }
-
