feat: 添加插入静音功能

--- a/src/core/style.scss
+++ b/src/core/style.scss
@@ -59,6 +59,10 @@
       background-color: $rhythm;
       color: $rhythm;
     }
+    &.mute {
+      background-color: $mute;
+      color: $mute;
+    }
   }
 
   .bg-color:not(.ft-color) {
