feat: 完成音效功能

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -33,8 +33,14 @@
   cursor: not-allowed;
 }
 
-.btn.radius {
+.btn.btn-radius {
   border-radius: 5px;
+}
+
+@for $i from 1 to 15 {
+  .btn.btn-radius-#{$i} {
+    border-radius: #{$i * 2}px;
+  }
 }
 
 .full {
