feat: 完成音效功能

--- a/src/core/style.scss
+++ b/src/core/style.scss
@@ -63,6 +63,10 @@
       background-color: $mute;
       color: $mute;
     }
+    &.special {
+      background-color: $special;
+      color: $special;
+    }
   }
 
   .bg-color:not(.ft-color) {
