feat: 完成配乐功能

--- a/src/core/style.scss
+++ b/src/core/style.scss
@@ -67,6 +67,10 @@
       background-color: $special;
       color: $special;
     }
+    &.bgm {
+      background-color: $bgm;
+      color: $bgm;
+    }
   }
 
   .bg-color:not(.ft-color) {
