--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -4,6 +4,7 @@
 @import './space.scss';
 @import './iconfont/iconfont.css';
 @import './iconfont-moyin/iconfont.css';
+@import "bootstrap/scss/bootstrap";
 
 .btn {
   margin: 0;
