--- a/src/assets/flex.scss
+++ b/src/assets/flex.scss
@@ -3,11 +3,13 @@
 
   &.flex-row {
     flex-direction: row;
+    justify-content: center;
     align-items: center;
   }
 
   &.flex-col {
     flex-direction: column;
+    justify-content: center;
     align-items: center;
   }
 
