--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,61 +1,5 @@
 @import './base.scss';
-@import './flex.scss';
-@import './size.scss';
-@import './space.scss';
+@import './custom.scss';
 @import './iconfont/iconfont.css';
 @import './iconfont-moyin/iconfont.css';
-@import "bootstrap/scss/bootstrap";
-
-.btn {
-  margin: 0;
-  padding: 2px 2px;
-  border: 1px solid transparent;
-  outline: none;
-  border-radius: 4px;
-  margin: 2px 2px;
-  display: block;
-  text-align: center;
-  font-size: 16px;
-
-  &:not(.btn-text):hover {
-    background-color: var(--tool-btn-hover-bg-color);
-  }
-
-  &.btn-text {
-    background-color: transparent;
-  }
-}
-
-.btn:not(.disabled) {
-  cursor: pointer;
-}
-
-.btn.disabled {
-  cursor: not-allowed;
-}
-
-.btn.btn-radius {
-  border-radius: 5px;
-}
-
-@for $i from 1 to 15 {
-  .btn.btn-radius-#{$i} {
-    border-radius: #{$i * 2}px;
-  }
-}
-
-.full {
-  width: 100%;
-  height: 100%;
-}
-
-.scroll {
-  &.scroll-y {
-    overflow-x: hidden;
-    overflow-y: auto;
-  }
-  &.scroll-x {
-    overflow-x: auto;
-    overflow-y: hidden;
-  }
-}
+@import '../../node_modules/bootstrap/scss/bootstrap.scss';
