feat: 添加持久化功能

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -5,6 +5,7 @@
   --tool-purple-color: #9958f4;
   --tool-yellow-color: #f6b601;
   --tool-btn-hover-bg-color: #e5e5e5;
+  --tool-bg-color: #f4f6f7;
 }
 
 ::-webkit-scrollbar {
