--- a/src/assets/custom.scss
+++ b/src/assets/custom.scss
@@ -18,3 +18,12 @@ ul {
 li {
   list-style: none;
 }
+
+.scrollbar-none {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
