--- a/src/core/style.scss
+++ b/src/core/style.scss
@@ -1,16 +1,16 @@
 .ssml-wrapper {
-  --ssml-voice: #e86136;
-  --ssml-audio: #d31b39;
-  --ssml-emphasis: #e18d17;
-  --ssml-phoneme: #05b3b1;
-  --ssml-prosody: #d4ac00;
-  --ssml-say-as: #d4ac00;
-  --ssml-sub: #d4ac00;
-  --ssml-p: #d4ac00;
-  --ssml-s: #d4ac00;
-  --ssml-w: #d4ac00;
+  --ssml-voice: #ff5733;
+  --ssml-audio: #c70039;
+  --ssml-emphasis: #ffd700;
+  --ssml-phoneme: #02c3c1;
+  --ssml-prosody: #ffa500;
+  --ssml-say-as: #e6ae00;
+  --ssml-sub: #ff8c00;
+  --ssml-p: #b7003d;
+  --ssml-s: #ff4d00;
+  --ssml-w: #008080;
   --ssml-break: #04a363;
-  --ssml-mstts--express-as: #0e5dd5;
+  --ssml-mstts--express-as: #0079d3;
 
   position: relative;
   box-sizing: border-box;
