feat: 完成多人配音功能

--- a/src/core/style.scss
+++ b/src/core/style.scss
@@ -1,16 +1,17 @@
 .ssml-wrapper {
-  --ssml-voice: #ff5733;
-  --ssml-audio: #c70039;
-  --ssml-emphasis: #ffd700;
-  --ssml-phoneme: #02c3c1;
-  --ssml-prosody: #ffa500;
-  --ssml-say-as: #e6ae00;
-  --ssml-sub: #ff8c00;
-  --ssml-p: #b7003d;
-  --ssml-s: #ff4d00;
-  --ssml-w: #008080;
-  --ssml-break: #04a363;
-  --ssml-mstts--express-as: #0079d3;
+  --ssml-voice: #2ecc71;
+  --ssml-audio: #3498db;
+  --ssml-emphasis: #f39c12;
+  --ssml-phoneme: #9b59b6;
+  --ssml-prosody: #e74c3c;
+  --ssml-say-as: #1abc9c;
+  --ssml-sub: #e67e22;
+  --ssml-p: #d35400;
+  --ssml-s: #c0392b;
+  --ssml-w: #16a085;
+  --ssml-break: #27ae60;
+  --ssml-mstts--express-as: #2980b9;
+  --custom-management: #8e44ad;
 
   position: relative;
   box-sizing: border-box;
