--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,5 +1,6 @@
 @import './base.scss';
 @import './iconfont/iconfont.css';
 @import './iconfont-moyin/iconfont.css';
-@import '../../node_modules/bootstrap/scss/bootstrap.scss';
+@import './bootstrap.scss';
+@import './scrollbar.scss';
 @import './custom.scss';
