--- a/src/core/style.scss
+++ b/src/core/style.scss
@@ -49,10 +49,13 @@
     height: 18px;
     max-width: 150px;
     white-space: nowrap;
+    transition: all 0.1s ease;
 
     &:not(.left):hover {
       z-index: 1;
       max-width: 300px;
+      transform: scale(1.1);
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.5);
     }
 
     .data-content {
@@ -65,6 +68,7 @@
       color: #e2fafa;
       opacity: 0.6;
       font-size: 0.5rem;
+      transition: all 0.1s ease;
 
       &:hover {
         cursor: pointer;
