--- a/src/core/style.scss
+++ b/src/core/style.scss
@@ -78,10 +78,18 @@
   }
 }
 
+@mixin grayscale() {
+  -webkit-filter: opacity(100%);
+  filter: opacity(50%);
+  transition: all 0.1s ease;
+}
+
 .w-e-text-container.grayscale {
   .ssml-wrapper:not(:hover) {
-    -webkit-filter: opacity(100%);
-    filter: opacity(50%);
-    transition: all 0.1s ease;
+    @include grayscale();
+  }
+
+  div[data-slate-editor] > p > [data-slate-node='text'] {
+    @include grayscale();
   }
 }
