feat: 更新多人配音标签颜色

--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -6,4 +6,15 @@
   --tool-yellow-color: #f6b601;
   --tool-btn-hover-bg-color: #e5e5e5;
   --tool-bg-color: #f4f6f7;
+
+  --color-red: #ff0000;
+  --color-blue: #0000ff;
+  --color-green: #00ff00;
+  --color-purple: #800080;
+  --color-cyan: #00ffff;
+  --color-orange: #ffa500;
+  --color-gray: #808080;
+  --color-pink: #ff1493;
+  --color-yellow: #ffff00;
+  --color-dark-green: #008000;
 }
