--- a/src/core/style.scss
+++ b/src/core/style.scss
@@ -10,8 +10,8 @@
   --ssml-s: #c0392b;
   --ssml-w: #16a085;
   --ssml-break: #27ae60;
-  --ssml-mstts--express-as: #2980b9;
-  --custom-management: #8e44ad;
+  --ssml-mstts--express-as: #ffff00;
+  --custom-management: #ff1493;
 
   position: relative;
   box-sizing: border-box;
