--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -1,9 +1,9 @@
 @font-face {
   font-family: 'iconfont'; /* Project id 4209212 */
   src:
-    url('iconfont.woff2?t=1693810338573') format('woff2'),
-    url('iconfont.woff?t=1693810338573') format('woff'),
-    url('iconfont.ttf?t=1693810338573') format('truetype');
+    url('iconfont.woff2?t=1694521860699') format('woff2'),
+    url('iconfont.woff?t=1694521860699') format('woff'),
+    url('iconfont.ttf?t=1694521860699') format('truetype');
 }
 
 .iconfont {
@@ -12,6 +12,10 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-zuixiaohua:before {
+  content: '\e7df';
 }
 
 .icon-play1:before {
