feat: 支持moyin的ssml序列化

--- a/src/core/style.scss
+++ b/src/core/style.scss
@@ -12,6 +12,7 @@
   --ssml-break: #27ae60;
   --ssml-mstts--express-as: #ffff00;
   --custom-management: #ff1493;
+  --moyin-w: #c0392b;
 
   position: relative;
   box-sizing: border-box;
