--- a/src/assets/base.scss
+++ b/src/assets/base.scss
@@ -5,7 +5,8 @@
   --tool-purple-color: #9958f4;
   --tool-yellow-color: #f6b601;
   --tool-btn-hover-bg-color: #e5e5e5;
-  --tool-bg-color: #f4f6f7;
+  --tool-bg-color: #ffffff;
+  --tool-bg-grey-color: #f4f6f7;
 
   --color-red: #ff0000;
   --color-blue: #0000ff;
